Реализовать все необходимые функции